Introduce autofac for IoC

--- a/TuitionFondIrida/TuitionFondIrida.Persistence/TuitionFondIrida.Persistence.csproj
+++ b/TuitionFondIrida/TuitionFondIrida.Persistence/TuitionFondIrida.Persistence.csproj
@@ -15,4 +15,8 @@
       <ProjectReference Include="..\TuitionIridaFond.Persistence.Contracts\TuitionIridaFond.Persistence.Contracts.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Autofac" Version="6.4.0" />
+    </ItemGroup>
+
 </Project>
