--- a/TuitionFondIrida/TuitionFondIrida.Api/TuitionFondIrida.Api.csproj
+++ b/TuitionFondIrida/TuitionFondIrida.Api/TuitionFondIrida.Api.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac" Version="6.4.0" />
       <PackageReference Include="MediatR" Version="11.0.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
