--- a/TuitionFondIrida/TuitionFondIrida.Application/TuitionFondIrida.Application.csproj
+++ b/TuitionFondIrida/TuitionFondIrida.Application/TuitionFondIrida.Application.csproj
@@ -15,7 +15,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac" Version="6.4.0" />
       <PackageReference Include="MediatR" Version="11.0.0" />
+      <PackageReference Include="MediatR.Extensions.Autofac.DependencyInjection" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
