--- a/TuitionFondIrida/TuitionFondIrida.Host/TuitionFondIrida.Host.csproj
+++ b/TuitionFondIrida/TuitionFondIrida.Host/TuitionFondIrida.Host.csproj
@@ -14,7 +14,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+      <PackageReference Include="Autofac" Version="6.4.0" />
+      <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
