--- a/TuitionFondIrida/TuitionFondIrida.Persistence/TuitionFondIrida.Persistence.csproj
+++ b/TuitionFondIrida/TuitionFondIrida.Persistence/TuitionFondIrida.Persistence.csproj
@@ -17,6 +17,7 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="6.4.0" />
+      <PackageReference Include="contentful.csharp" Version="7.2.2" />
     </ItemGroup>
 
 </Project>
