--- a/TuitionFondIrida/TuitionIridaFond.Persistence.Contracts/TuitionIridaFond.Persistence.Contracts.csproj
+++ b/TuitionFondIrida/TuitionIridaFond.Persistence.Contracts/TuitionIridaFond.Persistence.Contracts.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="contentful.csharp" Version="7.2.2" />
+    </ItemGroup>
+
 </Project>
