Add sensitive vars to .env

--- a/TuitionFondIrida/TuitionFondIrida.Host/appsettings.json
+++ b/TuitionFondIrida/TuitionFondIrida.Host/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AppSettings": {
+    "Contentful": {
+      "DeliveryApiKey": "",
+      "PreviewApiKey": "",
+      "SpaceId": ""
+    }
+  },
   "AllowedHosts": "*"
 }
