--- a/TuitionFondIrida/TuitionFondIrida.Host/TuitionFondIrida.Host.csproj
+++ b/TuitionFondIrida/TuitionFondIrida.Host/TuitionFondIrida.Host.csproj
@@ -16,6 +16,7 @@
     <ItemGroup>
       <PackageReference Include="Autofac" Version="6.4.0" />
       <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+      <PackageReference Include="dotenv.net" Version="3.1.1" />
     </ItemGroup>
 
 </Project>
