--- a/TuitionFondIrida/TuitionFondIrida.Persistence/TuitionFondIrida.Persistence.csproj
+++ b/TuitionFondIrida/TuitionFondIrida.Persistence/TuitionFondIrida.Persistence.csproj
@@ -18,6 +18,7 @@
     <ItemGroup>
       <PackageReference Include="Autofac" Version="6.4.0" />
       <PackageReference Include="contentful.csharp" Version="7.2.2" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     </ItemGroup>
 
 </Project>
