--- a/TuitionFondIrida/TuitionFondIrida.Host/appsettings.json
+++ b/TuitionFondIrida/TuitionFondIrida.Host/appsettings.json
@@ -10,6 +10,11 @@
       "DeliveryApiKey": "",
       "PreviewApiKey": "",
       "SpaceId": ""
+    },
+    "EmailClient": {
+      "FromEmailAddress": "",
+      "FromEmailPassword": "",
+      "SmtpClient": ""
     }
   },
   "AllowedHosts": "*"
