--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "axios": "^1.1.3",
         "eslint": "8.22.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -17,6 +18,7 @@
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
         "@types/styled-components": "^5.1.26",
+        "eslint-config-react": "^1.1.7",
         "prettier": "2.7.1"
     },
     "scripts": {
