--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "axios": "^1.1.3",
+        "dotenv": "^16.0.3",
         "eslint": "8.22.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
