--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,23 +3,23 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "axios": "^1.1.3",
-        "dotenv": "^16.0.3",
+        "axios": "1.1.3",
+        "dotenv": "16.0.3",
         "eslint": "8.22.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.4.2",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-router-dom": "6.4.2",
         "react-scripts": "5.0.1",
-        "styled-components": "^5.3.6",
-        "typescript": "^4.8.4",
-        "web-vitals": "^2.1.4"
+        "styled-components": "5.3.6",
+        "typescript": "4.8.4",
+        "web-vitals": "2.1.4"
     },
     "devDependencies": {
-        "@types/node": "^16.11.64",
-        "@types/react": "^18.0.21",
-        "@types/react-dom": "^18.0.6",
-        "@types/styled-components": "^5.1.26",
-        "eslint-config-react": "^1.1.7",
+        "@types/node": "16.11.64",
+        "@types/react": "18.0.21",
+        "@types/react-dom": "18.0.6",
+        "@types/styled-components": "5.1.26",
+        "eslint-config-react": "1.1.7",
         "prettier": "2.7.1"
     },
     "scripts": {
