--- a/webapp/.env.placeholder
+++ b/webapp/.env.placeholder
@@ -1,1 +1,3 @@
 REACT_APP_API_URL=https://localhost:7042
+CONTENTFUL_DELIVERY_ACCESS_KEY=*
+CONTENTFUL_BASE_GRAPHQL_URL=https://graphql.contentful.com/content/v1/spaces/*/environment/*
