Add contentful environment env var

--- a/TuitionFondIrida/TuitionFondIrida.Host/.env.placeholder
+++ b/TuitionFondIrida/TuitionFondIrida.Host/.env.placeholder
@@ -1,3 +1,8 @@
 AppSettings__Contentful__DeliveryApiKey=
 AppSettings__Contentful__PreviewApiKey=
 AppSettings__Contentful__SpaceId=
+AppSettings__Contentful__Environment=
+
+AppSettings__EmailClient__FromEmailAddress=
+AppSettings__EmailClient__FromEmailPassword=
+AppSettings__EmailClient__SmtpClient=
