--- a/TuitionFondIrida/TuitionFondIrida.Host/appsettings.json
+++ b/TuitionFondIrida/TuitionFondIrida.Host/appsettings.json
@@ -9,7 +9,8 @@
     "Contentful": {
       "DeliveryApiKey": "",
       "PreviewApiKey": "",
-      "SpaceId": ""
+      "SpaceId": "",
+      "Environment": ""
     },
     "EmailClient": {
       "FromEmailAddress": "",
