--- a/webapp/package.json
+++ b/webapp/package.json
@@ -8,6 +8,7 @@
         "eslint": "8.22.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-markdown-to-html": "^1.0.11",
         "react-router-dom": "6.4.2",
         "react-scripts": "5.0.1",
         "styled-components": "5.3.6",
