--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,9 +6,9 @@
         "axios": "1.1.3",
         "dotenv": "16.0.3",
         "eslint": "8.22.0",
+        "markdown-to-jsx": "^7.1.7",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-markdown-to-html": "^1.0.11",
         "react-router-dom": "6.4.2",
         "react-scripts": "5.0.1",
         "styled-components": "5.3.6",
