--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,11 +18,11 @@
     },
     "devDependencies": {
         "@types/node": "16.11.64",
-        "@types/react": "18.0.21",
+        "@types/react": "^18.0.21",
         "@types/react-dom": "18.0.6",
         "@types/react-modal": "^3.13.1",
         "@types/styled-components": "5.1.26",
-        "eslint-config-react": "1.1.7",
+        "eslint-config-react-app": "^7.0.1",
         "prettier": "2.7.1"
     },
     "scripts": {
