--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
         "react-dom": "18.2.0",
         "react-modal": "^3.15.1",
         "react-router-dom": "6.4.2",
+        "react-router-hash-link": "^2.4.3",
         "react-scripts": "5.0.1",
         "styled-components": "5.3.6",
         "typescript": "4.8.4",
@@ -21,6 +22,7 @@
         "@types/react": "^18.0.21",
         "@types/react-dom": "18.0.6",
         "@types/react-modal": "^3.13.1",
+        "@types/react-router-hash-link": "^2.4.5",
         "@types/styled-components": "5.1.26",
         "eslint-config-react-app": "^7.0.1",
         "prettier": "2.7.1"
