--- a/docker-compose.tuition-fond-irida-app.yaml
+++ b/docker-compose.tuition-fond-irida-app.yaml
@@ -21,6 +21,6 @@ services:
     ports:
       - "25000:3000"
     environment:
-      - REACT_APP_API_URL=http://api
+      - REACT_APP_API_URL=http://api:5069
       - REACT_APP_CONTENTFUL_DELIVERY_ACCESS_KEY=#{DELIVERY_ACCESS_KEY}#
       - REACT_APP_CONTENTFUL_BASE_GRAPHQL_URL=https://graphql.contentful.com/content/v1/spaces/lpy11m2kyblz/environments/ui
