--- a/docker-compose.tuition-fond-irida-app.yaml
+++ b/docker-compose.tuition-fond-irida-app.yaml
@@ -24,3 +24,5 @@ services:
       - REACT_APP_API_URL=http://api:80
       - REACT_APP_CONTENTFUL_DELIVERY_ACCESS_KEY=#{DELIVERY_ACCESS_KEY}#
       - REACT_APP_CONTENTFUL_BASE_GRAPHQL_URL=https://graphql.contentful.com/content/v1/spaces/lpy11m2kyblz/environments/ui
+    depends_on:
+      - api
