--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,6 +9,7 @@
         "markdown-to-jsx": "^7.1.7",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-hook-form": "^7.42.1",
         "react-markdown": "^8.0.4",
         "react-modal": "^3.15.1",
         "react-router-dom": "6.4.2",
